--- a/01_lecture/index.html
+++ b/01_lecture/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        p{
-            font-size: 30px;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <p>Hello How are you?</p>
     <script src="index.js"></script>
