--- a/18_tiktactoe/tic.html
+++ b/18_tiktactoe/tic.html
@@ -9,11 +9,23 @@
 </head>
 
 <body>
+  <div class="container">
+   <h2>Tic Tac Toe</h2>
     <div class="buttons">
-        <button type="button" class="box1"> 3</button>
-        <button type="button">" "</button>
-
+        <div class="buttons">
+            <div class="box" id="box1"></div>
+            <div class="box" id="box2"></div>
+            <div class="box" id="box3"></div>
+            <div class="box" id="box4"></div>
+            <div class="box" id="box5"></div>
+            <div class="box" id="box6"></div>
+            <div class="box" id="box7"></div>
+            <div class="box" id="box8"></div>
+            <div class="box" id="box9"></div>
+        </div>
     </div>
+    <h3 id="reset">Reset Game</h3>
+  </div>
     <script src="tic.js"></script>
 </body>
 
