--- a/19_fetchAPI/fetch.html
+++ b/19_fetchAPI/fetch.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A Online Store</title>
+    <link rel="stylesheet" href="fetch.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Product List</h1>
+        <input type="text" id="searchBar" placeholder="Search products..." />
+        <div id="products" class="product-grid"></div>
+    </div>
+<script src="fetch.js"></script>
 </body>
 </html>
