--- a/17_calculator/calc.html
+++ b/17_calculator/calc.html
@@ -10,7 +10,8 @@
 
 <body>
   <div class="container">
-    <input class="first" type="text" placeholder="" />
+    <h1>Calculator</h1>
+    <input class="input" type="text" placeholder="" />
     <div class="buttons">
       <button type="button" id="add">+</button>
       <button type="button" id="sub">-</button>
